Fixes edge spacing on larger mobile screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,8 @@
   --m-edge-spacing: 1rem; /* 16px */
   --m-edge-spacing-neg: -1rem;
   /* larger smart phones */
-  --ml-edge-spaceing: 2rem; /* 32px */
-  --ml-edge-spaceing-neg: -2rem;
+  --ml-edge-spacing: 2rem; /* 32px */
+  --ml-edge-spacing-neg: -2rem;
   --st-edge-spacing: 3rem; /* 48px */
   --st-edge-spacing-neg: -3rem;
 }
@@ -279,7 +279,7 @@ sup {
 
 @media all and (min-width: 375px) {
   .max-width {
-    padding: 0 var(--ml-edge-spaceing);
+    padding: 0 var(--ml-edge-spacing);
   }
 }
 
@@ -976,7 +976,13 @@ sup {
 // Works
 ***/
 .page--works__list {
-  margin: 0 -1rem; /* 16px */
+  margin: 0 var(--m-edge-spacing-neg);
+}
+
+@media all and (min-width: 375px) {
+  .page--works__list {
+    margin: 0 var(--ml-edge-spacing-neg);
+  }
 }
 
 @media all and (min-width: 1024px) {
@@ -1058,9 +1064,17 @@ sup {
 
 .page--work__feature {
   order: -1;
-  margin-right: -1rem;
-  margin-left: -1rem;
+  margin-right: var(--m-edge-spacing-neg);
+  margin-left: var(--m-edge-spacing-neg);
 }
+
+@media all and (min-width: 375px) {
+  .page--work__feature {
+    margin-right: var(--ml-edge-spacing-neg);
+    margin-left: var(--ml-edge-spacing-neg);
+  }
+}
+
 .page--work__feature img {
   display: block;
   width: 100%;
@@ -1254,11 +1268,17 @@ sup {
 
 .page--resume__services__list {
   display: flex;
-  margin: 0 -1rem 3rem;
+  margin: 0 var(--m-edge-spacing-neg) 3rem;
   padding: 2rem 0.5rem;
   overflow: hidden;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
+}
+
+@media all and (min-width: 375px) {
+  .page--resume__services__list {
+    margin: 0 var(--ml-edge-spacing-neg) 3rem;
+  }
 }
 
 @media all and (min-width: 1024px) {
@@ -1269,7 +1289,7 @@ sup {
 }
 
 .page--resume__services__list__item {
-  flex: 1 0 75%;
+  flex: 1 0 85%;
   padding: 0 0.5rem;
 }
 
@@ -1465,12 +1485,12 @@ sup {
 
 .page--writing__intro__feature {
   display: block;
-  margin: 0 var(--m-edge-spaceing-neg);
+  margin: 0 var(--m-edge-spacing-neg);
 }
 
 @media (min-width: 375px) {
   .page--writing__intro__feature {
-    margin: 0 var(--ml-edge-spaceing-neg);
+    margin: 0 var(--ml-edge-spacing-neg);
   }
 }
 
@@ -1529,7 +1549,7 @@ sup {
 
 @media (min-width: 375px) {
   .page--writing__related {
-    margin: 0 var(--ml-edge-spaceing-neg);
+    margin: 0 var(--ml-edge-spacing-neg);
   }
 }
 
